# misinformation-epidemic-model

./: .gitignore  CALIBRATION_GUIDE.md  FAKENEWSNET_CALIBRATION.md  METHODOLOGY.md  MODEL_ASSUMPTIONS.md  PROJECT_ANALYSIS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
notebooks/: academic_analysis.ipynb  baseline_vs_interventions.ipynb  complete_project_walkthrough.ipynb  fakenewsnet_calibration.ipynb  quick_start_academic.ipynb  real_data_calibration.ipynb
src/: __init__.py  analysis.py  calibration.py  calibration_fakenewsnet.py  cli.py  experiments.py  model.py  population.py  simulation.py  visualization.py
tests/: conftest.py  test_experiments.py  test_model.py  test_population.py  test_simulation.py
